--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Build Quartz
-        run: npx quartz build --directory=../vault
+        run: |
+          cd quartz
+          npx quartz build --directory=../vault
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
