fix: change of dir before installation of deps

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,9 @@ jobs:
         with:
           node-version: 22
       - name: Install Dependencies
-        run: npm ci
+        run: |
+          cd quartz
+          npx quartz build --directory=../vault
       - name: Build Quartz
         run: |
           cd quartz
