--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install Dependencies
         run: |
           cd quartz
-          npx quartz build --directory=../vault
+          npm ci
       - name: Build Quartz
         run: |
           cd quartz
